Fixed insertion of data to database and added concatination of SQL string

--- a/register.html
+++ b/register.html
@@ -17,26 +17,26 @@
 
                 <tr>
                     <td>First Name: </td>
-                    <td> <input id="fName" type="text" required> </td>
+                    <td> <input name="fName" type="text" required> </td>
                 </tr>
                 <tr>
                     <td>Last Name: </td>
-                    <td> <input id="lName" type="text" required> </td>
+                    <td> <input name="lName" type="text" required> </td>
                 </tr>
                 <tr>
                     <td>Email: </td>
-                    <td> <input id="email" type="text" required> </td>
+                    <td> <input name="email" type="text" required> </td>
                 </tr>
                 <tr>
                     <td>Select a Username: </td>
-                    <td> <input id="uName" type="text" required> </td>
+                    <td> <input name="uName" type="text" required> </td>
                 </tr>
                 <tr>
                     <td>Select a Password: </td>
-                    <td> <input id="pass" type="password" required> </td>
+                    <td> <input name="pass" type="password" required> </td>
                 </tr>
                 <tr>
-                    <td> <button>Submit</button> </td>
+                    <td> <input type="submit"> </td>
                     <td> <button>Reset</button> </td>
                 </tr>
 
