Added reset functionality to registration form

--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td> <input type="submit"> </td>
-                    <td> <button>Reset</button> </td>
+                    <td> <input type="reset"> </td>
                 </tr>
 
             </table>
